--- a/index.html
+++ b/index.html
@@ -17,4 +17,22 @@
       <li>Technology</li>
    </ul>
 </body>
+   <section id="production-diary">
+  <h2>Production diary – Week 15</h2>
+  <p><strong>Date:</strong> 10 February 2026</p>
+  <p>
+    This week I worked on my GitHub Pages portfolio website. I focused on
+    creating or improving the main sections (About, Projects, Skills, Contact)
+    and setting up my CS Maths & Tools page.
+  </p>
+  <p>
+    I am most happy with...
+  </p>
+  <p>
+    I found it difficult to...
+  </p>
+  <p>
+    Next time I want to improve...
+  </p>
+</section>
 </html>
