--- a/index.html
+++ b/index.html
@@ -25,13 +25,13 @@
     and setting up my CS Maths & Tools page.
   </p>
   <p>
-    I am most happy with...
+    I am most happy with making my own site.
   </p>
   <p>
-    I found it difficult to...
+    I found it difficult to coding the html.
   </p>
   <p>
-    Next time I want to improve...
+    Next time I want to improve the visual style of the website by adding custom CSS and experimenting with different colours.
   </p>
 </section>
 </body>
