--- a/index.html
+++ b/index.html
@@ -20,11 +20,6 @@
   <h2>Production diary – Week 15</h2>
   <p><strong>Date:</strong> 10 February 2026</p>
   <p>
-    This week I worked on my GitHub Pages portfolio website. I focused on
-    creating or improving the main sections (About, Projects, Skills, Contact)
-    and setting up my CS Maths & Tools page.
-  </p>
-  <p>
     I am most happy with making my own site.
   </p>
   <p>
@@ -33,6 +28,13 @@
   <p>
     Next time I want to improve the visual style of the website by adding custom CSS and experimenting with different colours.
   </p>
-</section>
+  </section>
+  <p>
+    This week I learn many new things from my lessons, like some fuction of program and learn about logic gate from computer achitecture.
+    I pround of my whole website, beacuse this is my first time to have a own website, although it just need to press few button to make it, I will make the website better at the future.
+    I think writing in english is the most challenging for me. Because english not my first language and I not good at it. I always feel difficult of using english.
+    I learn binary from this work. At the past, I just know a little about binary, but now, I already fully understand what binary is, I'm glad, that I can learn about binary.
+    About one concrete improvement that I want to make next week, I like to make my website look better ,such as improving the visual style.
+  </p>
 </body>
 </html>
